[project]
name = "corallab-planners"
version = "0.1.0"
description = "Common interface to many planners from many libraries."
authors = [{name = "Tassos Manganaris", email = "tassos.manganaris@gmail.com"}]
requires-python = ">=3.8,<3.9"
dependencies = ["corallab-assets @ git+https://github.com/corallab-base/assets.git@0.2.2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
corallab-planners = { path = ".", editable = true }
corallab-lib = { path = "../corallab-lib", extras = ["curobo"], editable = true }
torch_robotics = { path = "../torch_robotics", editable = true }
mp-baselines = { path = "../mp_baselines", editable = true }
pyplusplus = "*"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.8.*"
numpy = "<1.24"
boost = ">=1.85.0,<1.86"
