[tool.poetry]
name = "corallab-planners"
version = "0.1.0"
description = "Common interface to many planners from many libraries."
authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
readme = "README.org"


[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
